# vyuh_hmi

./: .gitignore  README.md  docker-compose.yml  start.sh  stop.sh
app/: pubspec.yaml
app/assets/configs/: chemical_plant.json  pharma_reactor.json
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/config/: config_loader.dart  dashboard_config.dart  hmi_theme_engine.dart  widget_registry.dart
app/lib/models/: api_response.dart  api_response.g.dart  plc_data.dart  plc_data.g.dart  plc_device.dart  plc_device.g.dart
app/lib/screens/: alarm_history_screen.dart  audit_trail_screen.dart  batch_record_screen.dart  dashboard_screen.dart  device_list_screen.dart  history_screen.dart  login_screen.dart  onboarding_screen.dart  plc_detail_screen.dart  splash_screen.dart
app/lib/services/: api_service.dart  auth_service.dart  websocket_service.dart
app/lib/stores/: dashboard_store.dart  dashboard_store.g.dart
app/lib/theme/: hmi_colors.dart  hmi_theme.dart
app/lib/widgets/: alarm_banner_widget.dart  batch_state_widget.dart  connection_status_bar.dart  control_toggle_widget.dart  esig_dialog.dart  gauge_widget.dart  inactivity_detector.dart  line_chart_widget.dart  persistent_alarm_panel.dart  stat_card.dart  status_indicator.dart
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: widget_test.dart
design/: dashboard.html
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  config.toml
server/src/: auth.rs  config.rs  db.rs  discovery.rs  export.rs  lib.rs  main.rs  modbus.rs  models.rs  opcua_client.rs  protocol.rs  rate_limit.rs  routes.rs  state.rs  tsdb.rs  ws.rs
server/tests/: integration_tests.rs
simulator/: launch_simulators.sh  modbus_sim.py
