[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "opcua_sim"
path = "src/bin/opcua_sim.rs"

[dependencies]
# web server

axum = { version = "0.8", features = ["ws"]}
tokio = { version = "1", features = ["full"] }
tokio-modbus = "0.17"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
rand = "0.10.0"

# config + protocol abstraction
toml = "0.8"
async-trait = "0.1"

# OPC UA protocol (client for server, server for simulator)
opcua = { version = "0.12", features = ["client", "server", "console-logging"] }
